# rustix-os

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: FUNDING.yml
kernel-core/: Cargo.toml
kernel-core/src/: bootstrap.rs  hal.rs  hal.s  lib.rs
kernel-x86/: Cargo.toml
kernel-x86/src/: framebuffer.rs  gdt.rs  interrupts.rs  keyboard.rs  logger.rs  main.rs  mouse.rs  scheduler.rs  shell.rs  syscall.rs  usermode.rs
kernel-x86/src/framebuffer/: core.rs  dashboard.rs  font.rs  mod.rs  text.rs  tty.rs  window.rs
knowledge/: feature_registry.md
memory-subsystem/: Cargo.toml
memory-subsystem/src/: allocator.rs  ecc.rs  lib.rs  scrubber.rs
runner/: Cargo.toml
runner/src/: main.rs
scheduler/: Cargo.toml
scheduler/src/: dispatcher.rs  lib.rs  tmr.rs
simulation-dashboard/: Cargo.toml
simulation-dashboard/src/: main.rs
usermode-desktop/: Cargo.toml  build.rs  linker.ld
usermode-desktop/.cargo/: config.toml
usermode-desktop/src/: atlas_font.rs  console.rs  file_manager.rs  font.rs  graphics.rs  main.rs  monitor.rs  state.rs  syscalls.rs  taskbar.rs  utils.rs  wallpaper.rs  window.rs
usermode-x86/: Cargo.toml
usermode-x86/src/: lib.rs  syscall.rs  usermode.rs
virtual-fs/: Cargo.toml
virtual-fs/src/: inode.rs  lib.rs  vfs.rs
