[workspace]
resolver = "2"
members = [
    "memory-subsystem",
    "scheduler",
    "kernel-core",
    "simulation-dashboard",
    "virtual-fs",
    "kernel-x86",
    "runner",
    "usermode-x86",
]
default-members = [
    "memory-subsystem",
    "scheduler",
    "kernel-core",
    "simulation-dashboard",
    "virtual-fs",
    "runner",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
