[workspace]
resolver = "2"
members = [
    "memory-subsystem",
    "scheduler",
    "kernel-core",
    "simulation-dashboard",
    "virtual-fs",
    "kernel-x86",
    "runner",
    "usermode-x86",
    "usermode-desktop",
]
default-members = [
    "memory-subsystem",
    "scheduler",
    "kernel-core",
    "simulation-dashboard",
    "virtual-fs",
    "runner",
]

[profile.dev]
panic = "abort"
opt-level = 3

[profile.release]
panic = "abort"
