[package]
name = "kernel-x86"
version = "0.1.0"
edition = "2021"

[dependencies]
# Depend on kernel-core in strict no_std mode (no default std feature!)
kernel-core = { path = "../kernel-core", default-features = false }
bootloader_api = "0.11.15"
x86_64 = "0.14.2"
virtual-fs = { path = "../virtual-fs" }
linked_list_allocator = "0.10.5"

[[bin]]
name = "kernel-x86"
path = "src/main.rs"
test = false
bench = false
